# University

./: README.md
COS2614/Assignment1/: ReadMe.md  ReadMe.txt
COS2614/Assignment1/COS2614A1/: CMakeLists.txt  book.cpp  book.h  libraryitem.cpp  libraryitem.h  librarymanager.cpp  librarymanager.h  magazine.cpp  magazine.h  main.cpp
